A11y: fix color contrast, aria labels

--- a/src/scss/layout/_products.scss
+++ b/src/scss/layout/_products.scss
@@ -77,6 +77,7 @@
 
     a {
       font-weight: 600;
+      color: #0072ee;
     }
   }
 
